--- a/public/index.html
+++ b/public/index.html
@@ -604,6 +604,45 @@
                 justify-content: center;
             }
         }
+
+        .text-input-container {
+            position: relative;
+        }
+
+        .suggestions-container {
+            position: absolute;
+            background: white;
+            border: 1px solid #e5e7eb;
+            border-radius: 0.5rem;
+            box-shadow: 0 4px 6px -1px rgba(0, 0, 0, 0.1);
+            max-height: 10rem;
+            overflow-y: auto;
+            width: 100%;
+            z-index: 100;
+            display: none;
+            top: 100%;
+            left: 0;
+            margin-top: 4px;
+        }
+
+        .suggestion-item {
+            padding: 0.75rem 1rem;
+            cursor: pointer;
+            transition: background-color 0.2s;
+            font-size: 0.95rem;
+            color: #374151;
+        }
+
+        .suggestion-item:hover,
+        .suggestion-item.selected {
+            background-color: #f3f4f6;
+        }
+
+        .loading-suggestions {
+            padding: 0.75rem 1rem;
+            color: #6b7280;
+            font-style: italic;
+        }
     </style>
 </head>
 <body>
@@ -654,7 +693,10 @@
                 
                 <div class="form-group">
                     <label for="textInput">Enter Text</label>
-                    <textarea id="textInput" rows="4" placeholder="Enter your text here..."></textarea>
+                    <div class="text-input-container">
+                        <textarea id="textInput" rows="4" placeholder="Enter your text here..."></textarea>
+                        <div id="suggestions" class="suggestions-container"></div>
+                    </div>
                 </div>
                 
                 <button id="generateBtn" type="submit">
@@ -712,6 +754,9 @@
         const defaultVoiceId = 'hi-IN-amit';
         const styleSelect = document.getElementById('styleSelect');
         let selectedStyle = 'conversational';
+        const suggestionsContainer = document.getElementById('suggestions');
+        let suggestionTimeout;
+        let selectedSuggestionIndex = -1;
 
         // Navigation
         navButtons.forEach(button => {
@@ -1043,13 +1088,99 @@
             selectedStyle = e.target.value;
         });
 
+        function renderSuggestions(suggestions = []) {
+            if (suggestions.length === 0) {
+                suggestionsContainer.style.display = 'none';
+                return;
+            }
+            suggestionsContainer.innerHTML = '';
+            suggestions.forEach(suggestion => {
+                const item = document.createElement('div');
+                item.className = 'suggestion-item';
+                item.textContent = suggestion;
+                item.addEventListener('click', () => {
+                    textInput.value = suggestion;
+                    suggestionsContainer.style.display = 'none';
+                });
+                suggestionsContainer.appendChild(item);
+            });
+            suggestionsContainer.style.display = 'block';
+            selectedSuggestionIndex = -1;
+        }
+
+        textInput.addEventListener('input', () => {
+            if (suggestionTimeout) clearTimeout(suggestionTimeout);
+            const text = textInput.value.trim();
+            if (text.length < 3) {
+                suggestionsContainer.style.display = 'none';
+                return;
+            }
+
+            suggestionTimeout = setTimeout(async () => {
+                suggestionsContainer.innerHTML = '<div class="loading-suggestions">Loading...</div>';
+                suggestionsContainer.style.display = 'block';
+                const { suggestions } = await getSuggestions(text);
+                renderSuggestions(suggestions);
+            }, 500); // Debounce for 500ms
+        });
+
+        textInput.addEventListener('keydown', e => {
+            const items = suggestionsContainer.querySelectorAll('.suggestion-item');
+            if (suggestionsContainer.style.display === 'none' || items.length === 0) return;
+
+            if (e.key === 'ArrowDown') {
+                e.preventDefault();
+                selectedSuggestionIndex = (selectedSuggestionIndex + 1) % items.length;
+                updateSelectedSuggestion(items);
+            } else if (e.key === 'ArrowUp') {
+                e.preventDefault();
+                selectedSuggestionIndex = (selectedSuggestionIndex - 1 + items.length) % items.length;
+                updateSelectedSuggestion(items);
+            } else if (e.key === 'Enter') {
+                e.preventDefault();
+                if (selectedSuggestionIndex > -1) {
+                    textInput.value = items[selectedSuggestionIndex].textContent;
+                    suggestionsContainer.style.display = 'none';
+                }
+            } else if (e.key === 'Escape') {
+                suggestionsContainer.style.display = 'none';
+            }
+        });
+
+        function updateSelectedSuggestion(items) {
+            items.forEach((item, index) => {
+                item.classList.toggle('selected', index === selectedSuggestionIndex);
+            });
+        }
+
+        document.addEventListener('click', e => {
+            if (!textInput.contains(e.target) && !suggestionsContainer.contains(e.target)) {
+                suggestionsContainer.style.display = 'none';
+            }
+        });
+
+        async function getSuggestions(text) {
+            try {
+                const response = await fetch('/api/suggestions', {
+                    method: 'POST',
+                    headers: { 'Content-Type': 'application/json' },
+                    body: JSON.stringify({ text }),
+                });
+                if (!response.ok) return { suggestions: [] };
+                return await response.json();
+            } catch (error) {
+                console.error('Error fetching suggestions:', error);
+                return { suggestions: [] };
+            }
+        }
+
         // Initialize the app
         document.addEventListener('DOMContentLoaded', () => {
             loadVoices();
             loadHistory();
             clearHistoryBtn.addEventListener('click', clearHistory);
             updateDownloadButton(null);
-            selectedStyle = styleSelect.value; // Set initial style
+            selectedStyle = styleSelect.value;
         });
     </script>
 </body>
